objects/tspa__VRA_logs__c.object
<CustomObject>
    <fields>
        <fullName>tspa__Affected_Id__c</fullName>
        <label>Affected Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Class_Method__c</fullName>
        <label>Class Method</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Component__c</fullName>
        <label>Component</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Logging_Level__c</fullName>
        <label>Logging Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Request_body__c</fullName>
        <label>Request body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Response_body__c</fullName>
        <label>Response body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>VRA logs</label>
    <listViews>
        <fullName>tspa__All</fullName>
        <columns>NAME</columns>
        <columns>tspa__Response_body__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>VRA logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VRA logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>